--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -562,36 +562,38 @@
         <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="vErr"></div>{{- /* End Auth Section */ -}}
 
         <div id="vPreorder">
-          <hr class="dashed mb-2 mt-3">
+          <div id="vPreorderEstimates">
+            <hr class="dashed mb-2 mt-3">
 
-          <div class="d-flex justify-content-between align-items-center">
-            <span class="grey fs18">
-              [[[Fee Projection]]]
-              <span class="ico-info fs12" data-tooltip="[[[fee_projection_tooltip]]]"></span>
-            </span>
-            <span class="grey fs14 underline pointer hoverbg" id="vFeeDetails">[[[details]]]</span>
-          </div>
-
-          <div class="py-1 d-flex align-items-center justify-content-center fs18" id="vFeeSummaryPct">
-            <span id="vFeeSummaryLow"></span>
-            <span class="fs15">%</span>
-            <span class="fs15 px-2">[[[to]]]</span>
-            <span id="vFeeSummaryHigh"></span>
-            <span class="fs15">%</span>
-          </div>
-
-          <div class="py-1 flex-column align-items-center justify-content-center fs18" id="vFeeSummary">
-            <div class="d-flex flex-row align-items-center justify-content-center">
-              <img class="micro-icon mx-1" data-icon="from">
-              <span id="summarySwapFeesLow"></span>
-              <span class="px-1">&ndash;</span>
-              <span id="summarySwapFeesHigh"></span>
+            <div class="d-flex justify-content-between align-items-center">
+              <span class="grey fs18">
+                [[[Fee Projection]]]
+                <span class="ico-info fs12" data-tooltip="[[[fee_projection_tooltip]]]"></span>
+              </span>
+              <span class="grey fs14 underline pointer hoverbg" id="vFeeDetails">[[[details]]]</span>
             </div>
-            <div class="d-flex flex-row align-items-center justify-content-center">
-              <img class="micro-icon mx-1" data-icon="to">
-              <span id="summaryRedeemFeesLow"></span>
-              <span class="px-1">&ndash;</span>
-              <span id="summaryRedeemFeesHigh"></span>
+
+            <div class="py-1 d-flex align-items-center justify-content-center fs18" id="vFeeSummaryPct">
+              <span id="vFeeSummaryLow"></span>
+              <span class="fs15">%</span>
+              <span class="fs15 px-2">[[[to]]]</span>
+              <span id="vFeeSummaryHigh"></span>
+              <span class="fs15">%</span>
+            </div>
+
+            <div class="py-1 flex-column align-items-center justify-content-center fs18" id="vFeeSummary">
+              <div class="d-flex flex-row align-items-center justify-content-center">
+                <img class="micro-icon mx-1" data-icon="from">
+                <span id="summarySwapFeesLow"></span>
+                <span class="px-1">&ndash;</span>
+                <span id="summarySwapFeesHigh"></span>
+              </div>
+              <div class="d-flex flex-row align-items-center justify-content-center">
+                <img class="micro-icon mx-1" data-icon="to">
+                <span id="summaryRedeemFeesLow"></span>
+                <span class="px-1">&ndash;</span>
+                <span id="summaryRedeemFeesHigh"></span>
+              </div>
             </div>
           </div>
 
