--- a/client/webserver/site/src/css/application.scss
+++ b/client/webserver/site/src/css/application.scss
@@ -40,11 +40,12 @@ $grid-breakpoints: (
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
 // @import "~bootstrap/scss/_transitions.scss";
-// @import "~bootstrap/scss/_dropdown.scss";
+@import "~bootstrap/scss/_dropdown.scss";
 @import "~bootstrap/scss/button-group";
 // @import "~bootstrap/scss/_input-group.scss";
 // @import "~bootstrap/scss/_custom-forms.scss";
 @import "~bootstrap/scss/nav";
+
 // @import "~bootstrap/scss/_navbar.scss";
 // @import "~bootstrap/scss/_card.scss";
 // @import "~bootstrap/scss/_breadcrumb.scss";
@@ -80,3 +81,4 @@ $grid-breakpoints: (
 @import "./forms_dark.scss";
 @import "./dex_settings.scss";
 @import "./mm.scss";
+@import "./mm_settings.scss";
