Event log and run status displayed

--- a/client/webserver/site/src/css/application.scss
+++ b/client/webserver/site/src/css/application.scss
@@ -82,3 +82,5 @@ $grid-breakpoints: (
 @import "./dex_settings.scss";
 @import "./mm.scss";
 @import "./mm_settings.scss";
+@import "./mm_logs.scss";
+@import "./mm_archives.scss";
