--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -3,17 +3,15 @@
 <div id="main" data-handler="mmsettings" class="mmsettings w-100 overflow-y-auto">
   <div class="flex-center fs28 text-break">Market Maker Settings</div>
   <div class="flex-center fs20 text-break">
-    <img id="baseLogo"><span id="baseHeader"></span> - <img id="quoteLogo"><span id="quoteHeader"></span>  @  <span id="hostHeader"></span>
+    <img id="baseLogo"><img id="quoteLogo"><span id="baseHeader"></span>-<span id="quoteHeader"></span>  @  <span id="hostHeader"></span>
   </div>
-  <div class="d-flex mt-1">
-    <div class="col-12 px-3">
-      <span id="settingsUpdatedMsg" class="settings-updated-msg px-2 d-hide">[[[settings_updated]]]</span>
-      <br/>
-      <button id="updateButton" class="fs20 px-2 mx-1 selected">[[[update_settings]]]</button>
-      <button id="createButton" class="fs20 px-2 mx-1 selected d-hide">[[[create_bot]]]</button>
-      <button id="cancelButton" class="fs20 px-2 mx-1 selected">[[[cancel]]]</button>
-      <button id="resetButton" class="fs20 px-2 mx-1 selected">[[[reset_settings]]]</button>
-    </div>
+  <div id="runTime" class="flex-center fs20 text-break d-hide"></div>
+  <div class="px-3 py-2">
+    <button id="cancelButton" class="fs20 px-2 my-2 mx-1 selected">[[[cancel]]]</button>
+    <button id="resetButton" class="fs20 px-2 mx-1 selected">[[[reset_settings]]]</button>
+    <button id="updateButton" class="fs20 px-2 mx-1 selected">[[[update_settings]]]</button>
+    <button id="createButton" class="fs20 px-2 mx-1 selected d-hide">[[[create_bot]]]</button>
+    <span id="settingsUpdatedMsg" class="settings-updated-msg px-2 d-hide">[[[settings_updated]]]</span>
   </div>
 
   <div id="botSettingsContainer" class="d-hide bot-settings-container">
