--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -9,7 +9,7 @@
   <link rel="icon" href="/img/favicon.png?v=AK4XS4">
   <meta name="description" content="Decred DEX Client Web Portal">
   <title>{{.Title}}</title>
-  <link href="/css/style.css?v=a179bbb8|fadb2030" rel="stylesheet">
+  <link href="/css/style.css?v=6967a375|12f4e280" rel="stylesheet">
 </head>
 <body {{if .UserInfo.DarkMode}} class="dark"{{end}}>
   <div class="popup-notes" id="popupNotes">
@@ -89,7 +89,7 @@
       [[[Order History]]]
     </a>
     {{if .Experimental}}
-    <a href="/markets" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
+    <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
@@ -104,7 +104,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=028e1498|b813f78d"></script>
+<script src="/js/entry.js?v=0445dc29|c2f50f53"></script>
 </body>
 </html>
 {{end}}
