--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -1001,7 +1001,7 @@
       <table class="compact">
         <tr>
           <td class="grey">[[[Type]]]</td>
-          <td><span id="txDetailsType"></span></td>
+          <td><span><span id="txDetailsType"></span><span id="txTypeTooltip" data-tooltip="" class="ico-info ms-1"></span></span></td>
         </tr>
         <tr id="txDetailsAmtSection">
           <td class="grey">[[[Amount]]]</td>
