mm: Add BotProblems to BotStatus
This PR adds a BotProblems struct to BotStatus that reports issues that
bots are facing. Some problems such as wallet sync and connectivity are
checked preemptively while others are reported when errors arise during
determining what orders to place and when actually placing them. The
preemptive checks are especially important for the Arb bot which
additionally confirms that the trading limits allow for an additional
trade. Balance deficiencies are also reported in BotProblems.

--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -993,6 +993,9 @@
         <span class="fs14 grey">USD</span>
       </span>
     </div>
+
+    <div data-tmpl="botProblemsBox" class="d-flex flex-column bot-problems-section">
+    </div>
   </div>
 
   <div class="d-flex align-items-stretch px-3 pt-2 py-2 mt-2 border-top">
