--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -605,6 +605,10 @@
     <form class="position-relative mw-425 d-hide" id="cexConfigForm" autocomplete="off">
       {{template "cexConfigForm"}}
     </form>
+
+    <form class="position-relative d-hide" id="orderReportForm" autocomplete="off">
+      {{template "orderReportForm"}}
+    </form>
   </div>  {{- /* END FORMS */ -}}
 </div>
 {{template "bottom"}}
