--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -54,6 +54,18 @@
             </div>
           </div>
         </div>
+        <div id="bridgeAssetBox" class="d-hide border-top">
+          <div class="d-flex align-items-center">
+            <div class="flex-grow-1 pe-3">
+              <div class="fs18 mb-1">This exact market does not exist on the exchange</div>
+              <div class="fs16 grey">A multi-hop arbitrage can be done using one of these bridge assets:</div>
+            </div>
+            <div>
+              <select id="bridgeAssetSelect" class="form-select fs18 w-auto">
+              </select>
+            </div>
+          </div>
+        </div>
         {{- /* MANUAL CONFIG */ -}}
         <div id="advancedConfig" class="d-hide">
           {{- /* VIEW-ONLY MODE */ -}}
