--- a/client/webserver/site/src/html/mmlogs.tmpl
+++ b/client/webserver/site/src/html/mmlogs.tmpl
@@ -161,6 +161,18 @@
             <td> <span><span id="cexOrderID" class="ease-color"></span><span id="copyCexOrderID" class="ease-color ico-copy mx-1 pt-0"></span></span></td>
           </tr>
           <tr>
+            <td class="grey">[[[base_header]]]</td>
+            <td><span id="cexOrderBaseAsset"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[quote_header]]]</td>
+            <td><span id="cexOrderQuoteAsset"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[order_type]]]</td>
+            <td><span id="cexOrderOrderType"></span></td>
+          </tr>
+          <tr id="cexOrderRateRow">
             <td class="grey">[[[Rate]]]</td>
             <td><span id="cexOrderRate"></span></td>
           </tr>
