--- a/client/webserver/site/src/html/settings.tmpl
+++ b/client/webserver/site/src/html/settings.tmpl
@@ -79,7 +79,10 @@
       <div id="gameCodeLink" class="py-3 mb-3 border-bottom pointer hoverbg">
         <span class="ico-ticket"></span> [[[Redeem game code]]]
       </div>
-      <p class="grey">[[[Build ID]]]: <span id="commitHash" class="mono"></span></p>
+      <div class="mb-3 pb-3 border-bottom {{if not $authed}}d-hide{{end}}">
+        <button id="companionAppBtn" class="fs15">[[[Pair companion app]]]</button>
+      </div>
+      <p class="grey">[[[Build ID]]]: <span class="mono">{{commitHash false}}</span></p>
     </div>
   </section>
 
