app: Update UI to support gasless redemptions
- When the wallet is unable to pre-fund a redemption, the user is
  informed before placing their order.
- The transaction details popup on the wallets screen displays both
  the user operation ID and the transaction ID submitted by the bundler.

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -680,6 +680,15 @@
       </div>
       <div class="fs15 p-3 text-center d-hide text-danger text-break" id="vErr"></div>{{- /* End Auth Section */ -}}
 
+      <div id="vUserOpWarning">
+        <div class="d-flex align-items-center text-info p-2">
+          <span class="ico-info fs14 me-2"></span>
+          <span class="fs14">
+            [[[user_op_required]]]
+          </span>
+        </div>
+      </div>
+
       <div id="vPreorder">
         <div id="vPreorderEstimates">
           <hr class="dashed mb-2 mt-3">
