--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -1076,6 +1076,10 @@
             <td class="grey">[[[tx_id]]]</td>
             <td><span id="txDetailsID" class="ease-color"></span><span id="copyTxIDBtn" class="ease-color ico-copy pt-0"></span></td>
           </tr>
+          <tr id="txDetailsUserOpIDSection" class="border-top">
+            <td class="grey">[[[user_op_id]]]</td>
+            <td><span id="txDetailsUserOpID" class="ease-color"></span><span id="copyUserOpIDBtn" class="ease-color ico-copy pt-0"></span></td>
+          </tr>
           <tr id="txDetailsRecipientSection" class="border-top">
             <td class="grey">[[[recipient]]]</td>
             <td><span id="txDetailsRecipient" class="ease-color"></span><span id="copyRecipientBtn" class="ease-color ico-copy pt-0"></span></td>
